Fixes Bug #71412 Incorrect ArrayIterator __construct signature

The implementation seems to be what needs to be fixed, not the
documentation.

ArrayIterator doesn't have a getIterator method(),
or an iterator setter,
and I don't think it makes sense for it to have one.
(Not very familiar with this class, though)

The bug **in Reflection** may have been added in 7.0.2 when fixing #71077
(The fact that the constructor was shared probably predates that)